--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-to-html",
-  "module": "main.ts",
+  "module": "newmain.ts",
   "type": "module",
   "devDependencies": {
     "bun-types": "^0.5.0"
